# ai-slop-detector

./: README.md
.github/: pull_request_template.md
.github/workflows/: check-pr-issue.yml
backend/: .env.example  pyproject.toml  pyrightconfig.json
backend/app/: env.py  limiter.py  main.py  redis_client.py  types.py
backend/app/api/v1/: api.py  audio_handler.py  image_handler.py  token_verif.py  utils.py  video_handler.py
extension/: .env.example  package-lock.json  package.json  wxt.config.ts
extension/src/entrypoints/: background.ts
extension/src/entrypoints/content/: index.ts  style.css
extension/src/entrypoints/options/: index.html  style.css  upload.ts
extension/src/entrypoints/popup/: index.html  main.ts  style.css
extension/src/utils/: constants.ts
